--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
   },
   "dependencies": {
     "next": "13.1.2",
+    "raf": "^3.4.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-native-reanimated": "^2.14.2",
+    "react-native-reanimated-swc-plugin": "^0.3.0",
+    "react-native-web": "^0.18.10"
   },
   "devDependencies": {
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
     "eslint": "8.32.0",
-    "eslint-config-next": "13.1.2",
-    "typescript": "4.9.4"
+    "eslint-config-next": "13.1.2"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "semi": false
   }
 }
